--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <header>
-            <h1>Imposter<br>Syndrone.</h1>
+            <h1>Design Student Survival.</h1>
+            <h2>A place to document & remind myself about the little moments of peace & joy.</h2>
+            <h3>ft. Rebecca Hart</h3>
         </header>
         <main>
            
