--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
             <h3>ft. Rebecca Hart</h3>
         </header>
         <main>
-           
+           <ol>
+            <li><a href="/frustration/index.html">Frustrations</a> <span class="numbers">03</span></li>
+            <li>Articles <span class="numbers">05</span></li>
+            <li>Practices <span class="numbers">07</span></li>
+            <li>Inspiration <span class="numbers">02</span></li>
+            <li>Quotes <span class="numbers">08</span></li>
+            <li>Gallery <span class="numbers">06</span></li>
+            <li>Products <span class="numbers">02</span></li>
+            <li>Soundtracks <span class="numbers">05</span></li>
+           </ol>
         </main>
         <footer>
-           
+            <p>© Wenny Chao, 2024</p>
         </footer>
     </body>
 </html>
