--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main>
            <ol>
             <li><a href="/frustration/index.html">Frustrations</a> <span class="numbers">03</span></li>
-            <li>Articles <span class="numbers">05</span></li>
+            <li><a href="/articles/index.html">Articles</a> <span class="numbers">05</span></li>
             <li>Practices <span class="numbers">07</span></li>
             <li>Inspiration <span class="numbers">02</span></li>
             <li>Quotes <span class="numbers">08</span></li>
