--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>links</title>
+        <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="reset.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+        <script defer src="arena.js"></script>
     </head>
     <body>
         <header>
