--- a/frustration/index.html
+++ b/frustration/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Frustrations</title>
+        <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="../reset.css" rel="stylesheet">
         <link href="../style.css" rel="stylesheet">
     </head>
