--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script defer src="arena.js"></script>
     </head>
     <body>
+        <!--
         <header>
             <h1>Design Student Survival.</h1>
             <h2>A place to document & remind myself about the little moments of peace & joy.</h2>
@@ -29,5 +30,21 @@
         <footer>
             <p>© Wenny Chao, 2024</p>
         </footer>
+        -->
+        <header>
+			<h1 id="channel-title"></h1>
+			<section id="channel-description"></section>
+            <p><a id="channel-link">Are.na ↗</a></p>
+		</header>
+		<main>
+			<section>
+				<ul id="channel-blocks"></ul>
+				<p><span id="channel-count"></span> blocks</p>
+			</section>
+		</main>
+		<footer>
+			<h2>Authors</h2>
+			<section id="channel-users"></section>
+		</footer>
     </body>
 </html>
