--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script defer src="arena.js"></script>
     </head>
     <body>
+        <div id="file-background">
         <!--
         <header>
             <h1>Design Student Survival.</h1>
@@ -32,19 +33,45 @@
         </footer>
         -->
         <header>
+            <div id="project"><h3>Project.04'</h3></div>
+            <h4>Typography And Interaction</h4><hr>
 			<h1 id="channel-title"></h1>
-			<section id="channel-description"></section>
-            <p><a id="channel-link">Are.na ↗</a></p>
+
+            <div id="file-container">
+                <h3 class="file-item">File Date Number</h3>
+                <p class="file-item" id="channel-created-date"></p>
+            </div><hr id="file-date-underline">
+			<h5>HAOYU CHAO</h5>
+            <h4 id="channel-description"></h4>
+            <a id="channel-link" href="https://www.are.na/rebecca-hart/design-student-survival" target="_blank"> ORIGINAL DOC ↗</a>
 		</header>
-		<main>
+		<!-- <main>
 			<section>
 				<ul id="channel-blocks"></ul>
 				<p><span id="channel-count"></span> blocks</p>
 			</section>
-		</main>
+		</main> -->
+
+        <main>
+            <div id="catagories">
+            <ul>
+             <li>SOUNDTRACKS <span class="numbers">05</span></li>
+             <li>LINKED MEDIA <span class="numbers">13</span></li>
+             <li>Gallery <span class="numbers">15</span></li>
+             <li>ATTACHMENT <span class="numbers">02</span></li>
+             <li>DISCOURSE <span class="numbers">04</span></li>
+             <li>CHANNEL <span class="numbers">01</span></li>
+            </ul>
+            </div>
+            <ul id="channel-blocks"></ul>
+         </main>
+
 		<footer>
-			<h2>Authors</h2>
+            <div id="signature-container">
+            <h5>Signature of organizer</h5>
 			<section id="channel-users"></section>
+            </div><hr id="signature-underline">
 		</footer>
+    </div>
     </body>
 </html>
