--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
 		<footer>
             <div id="signature-container">
-            <h5>Signature of organizer</h5>
-			<section id="channel-users"></section>
+            <h3 class="signature-item">Signature of organizer</h3>
+			<section class="signature-item" id="channel-users"></section>
             </div><hr id="signature-underline">
 		</footer>
     </div>
