--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <header>
             <h1>Design Student Survival.</h1>
             <h2>A place to document & remind myself about the little moments of peace & joy.</h2>
-            <h3>ft. Rebecca Hart</h3>
         </header>
         <main>
            <ol>
@@ -33,7 +32,7 @@
         </footer>
         -->
         <header>
-            <div id="project"><h3>Project.04'</h3></div>
+            <div id="project"><h6>Project.04'</h6></div>
             <h4>Typography And Interaction</h4><hr>
 			<h1 id="channel-title"></h1>
 
@@ -41,10 +40,12 @@
                 <h3 class="file-item">File Date Number</h3>
                 <p class="file-item" id="channel-created-date"></p>
             </div><hr id="file-date-underline">
+
 			<h5>HAOYU CHAO</h5>
             <h4 id="channel-description"></h4>
             <a id="channel-link" href="https://www.are.na/rebecca-hart/design-student-survival" target="_blank"> ORIGINAL DOC ↗</a>
 		</header>
+
 		<!-- <main>
 			<section>
 				<ul id="channel-blocks"></ul>
@@ -63,7 +64,8 @@
              <li>CHANNEL <span class="numbers">01</span></li>
             </ul>
             </div>
-            <ul id="channel-blocks"></ul>
+            <!-- <ul id="channel-blocks"></ul> -->
+            <div class="paperOverlay"></div>
          </main>
 
 		<footer>
@@ -72,6 +74,6 @@
 			<section class="signature-item" id="channel-users"></section>
             </div><hr id="signature-underline">
 		</footer>
-    </div>
+        </div>
     </body>
 </html>
