--- a/index.html
+++ b/index.html
@@ -10,68 +10,40 @@
     </head>
     <body>
         <div id="file-background">
-        <!--
+  
         <header>
-            <h1>Design Student Survival.</h1>
-            <h2>A place to document & remind myself about the little moments of peace & joy.</h2>
-        </header>
-        <main>
-           <ol>
-            <li><a href="frustration/">Frustrations</a> <span class="numbers">03</span></li>
-            <li><a href="articles/">Articles</a> <span class="numbers">05</span></li>
-            <li>Practices <span class="numbers">07</span></li>
-            <li>Inspiration <span class="numbers">02</span></li>
-            <li>Quotes <span class="numbers">08</span></li>
-            <li>Gallery <span class="numbers">06</span></li>
-            <li>Products <span class="numbers">02</span></li>
-            <li>Soundtracks <span class="numbers">05</span></li>
-           </ol>
-        </main>
-        <footer>
-            <p>© Wenny Chao, 2024</p>
-        </footer>
-        -->
-        <header>
-            <div id="project"><h6>Project.04'</h6></div>
-            <h4>Typography And Interaction</h4><hr>
+            <div id="project"><p>Project.04'</p></div>
+            <h2>Typography And Interaction</h2><hr>
 			<h1 id="channel-title"></h1>
-
+            
             <div id="file-container">
                 <h3 class="file-item">File Date Number</h3>
                 <p class="file-item" id="channel-created-date"></p>
             </div><hr id="file-date-underline">
 
-			<h5>HAOYU CHAO</h5>
-            <h4 id="channel-description"></h4>
+			<p id="my-name">HAOYU CHAO</p>
+            <h2 id="channel-description"></h2>
             <a id="channel-link" href="https://www.are.na/rebecca-hart/design-student-survival" target="_blank"> ORIGINAL DOC ↗</a>
 		</header>
 
-		<!-- <main>
-			<section>
-				<ul id="channel-blocks"></ul>
-				<p><span id="channel-count"></span> blocks</p>
-			</section>
-		</main> -->
-
         <main>
             <div id="catagories">
-            <ul>
-             <li>SOUNDTRACKS <span class="numbers">05</span></li>
-             <li>LINKED MEDIA <span class="numbers">13</span></li>
-             <li>Gallery <span class="numbers">15</span></li>
-             <li>ATTACHMENT <span class="numbers">02</span></li>
-             <li>DISCOURSE <span class="numbers">04</span></li>
-             <li>CHANNEL <span class="numbers">01</span></li>
+                <ul>
+                    <li><a href="/soundtracks/" target="_blank">LINKED MEDIA <span class="numbers">13</span></a></li>
+                    <li>Images <span class="numbers">16</span></li>
+                    <li>Articles <span class="numbers">04</span></li>
+                    <li><a href="/soundtracks/" target="_blank">SOUNDTRACKS <span class="numbers">05</span></a></li>
+                    <li>ATTACHMENT <span class="numbers">02</span></li>
             </ul>
             </div>
-            <!-- <ul id="channel-blocks"></ul> -->
+          <ul id="channel-blocks"></ul>
             <div class="paperOverlay"></div>
          </main>
 
 		<footer>
             <div id="signature-container">
-            <h3 class="signature-item">Signature of organizer</h3>
-			<section class="signature-item" id="channel-users"></section>
+                <h3 class="signature-item">Signature of organizer</h3>
+                <section class="signature-item" id="channel-users"></section>
             </div><hr id="signature-underline">
 		</footer>
         </div>
