--- a/linked-media/index.html
+++ b/linked-media/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Frustrations</title>
+        <title>Linked Media</title>
         <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="../reset.css" rel="stylesheet">
-        <link href="../style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+        <script defer src="arena.js"></script>
     </head>
     <body>
         <header>
-            <h4>Frustrations</h4>
+            <h1>Linked Media</h1>
         </header>
         <main>
-            <picture>
-                <figure>
-                    <img src="Imposter Syndrome.jpeg" alt="Imposter Syndrome." width="400" height="400">
-                    <figcaption>Imposter Syndrome.</figcaption>
-                </figure>
-                <figure>
-                    <img src="How to get unstuck.png" alt="How to get unstuck?" width="400" height="400">
-                    <figcaption>How to get unstuck?</figcaption>
-                </figure>
-                <figure>
-                    <img src="we do not know everything.jpeg" alt="We do not know everything." width="400" height="400">
-                    <figcaption>We do not know everything.</figcaption>
-                </figure>
-            </picture>
+            <section>
+				<ul id="channel-blocks"></ul>
+				<p><span id="channel-count"></span> blocks</p>
+			</section>
         </main>
         <footer>
             <p>© Wenny Chao, 2024</p>
