--- a/attachment/index.html
+++ b/attachment/index.html
@@ -5,16 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../reset.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
-		<script defer src="arena4.js"></script>
+		<script defer src="arena6.js"></script>
 	</head>
 	<body>
 		<header>
-			<h2>soundtracksssssss</h2>
+			<h2>attachmenttttttttt</h2>
 		</header>
 		<main>
 			<section>
 				<ul id="channel-blocks"></ul>
-				<p>4 blocks</p>
+				<p>x blocks</p>
 			</section>
 		</main>
 		<footer>
