--- a/article/index.html
+++ b/article/index.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../reset.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
-		<script defer src="arena4.js"></script>
+		<script defer src="arena5.js"></script>
 	</head>
 	<body>
 		<header>
-			<h2>soundtracksssssss</h2>
+			<h2>articlesssss</h2>
 		</header>
 		<main>
 			<section>
