--- a/images/index.html
+++ b/images/index.html
@@ -5,20 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../reset.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
-		<script defer src="arena4.js"></script>
+		<script defer src="arena3.js"></script>
 	</head>
 	<body>
 		<header>
-			<h2>soundtracksssssss</h2>
+			<h2>imagesssssss</h2>
 		</header>
 		<main>
 			<section>
 				<ul id="channel-blocks"></ul>
-				<p>4 blocks</p>
+				<p>16 blocks</p>
 			</section>
 		</main>
 		<footer>
             <p>© Wenny Chao, 2024</p>
+		
 		</footer>
 	</body>
 </html>
