--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <main>
             <div id="catagories">
                 <ul>
-                    <li><a href="/soundtracks/" target="_blank">LINKED MEDIA <span class="numbers">13</span></a></li>
-                    <li>Images <span class="numbers">16</span></li>
-                    <li>Articles <span class="numbers">04</span></li>
-                    <li><a href="/soundtracks/" target="_blank">SOUNDTRACKS <span class="numbers">05</span></a></li>
-                    <li>ATTACHMENT <span class="numbers">02</span></li>
+                    <li><a href="/linked-media/">LINKED MEDIA <span class="numbers">13</span></a></li>
+                    <li><a href="/images/">images <span class="numbers">16</span></a></li>
+                    <li><a href="/soundtracks/">SOUNDTRACKS <span class="numbers">04</span></a></li>
+                    <li><a href="/article/">Articles <span class="numbers">04</span></a></li>
+                    <li><a href="/attachment/">ATTACHMENT <span class="numbers">02</span></a></li>
             </ul>
             </div>
           <ul id="channel-blocks"></ul>
