--- a/linked-media/index.html
+++ b/linked-media/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Linked Media</title>
         <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="../reset.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <script defer src="arena.js"></script>
+        <script defer src="arena2.js"></script>
     </head>
     <body>
         <header>
@@ -15,7 +14,7 @@
         <main>
             <section>
 				<ul id="channel-blocks"></ul>
-				<p><span id="channel-count"></span> blocks</p>
+				<p>13 blocks</p>
 			</section>
         </main>
         <footer>
