--- a/attachment/index.html
+++ b/attachment/index.html
@@ -14,7 +14,7 @@
 		<main>
 			<section>
 				<ul id="channel-blocks"></ul>
-				<p>x blocks</p>
+				<p>2 blocks</p>
 			</section>
 		</main>
 		<footer>
