--- a/attachment/index.html
+++ b/attachment/index.html
@@ -9,16 +9,16 @@
 	</head>
 	<body>
 		<header>
-			<h2>attachmenttttttttt</h2>
+			<h1>attachment</h1>
+            <button id="back" onclick="window.location.href = '../index.html'">< home</button>
+            <button id="next" onclick="window.location.href = '../linked-media/'">next ></button>
 		</header>
 		<main>
 			<section>
 				<ul id="channel-blocks"></ul>
-				<p>2 blocks</p>
 			</section>
+            <div class="paperOverlay"></div>
 		</main>
-		<footer>
-            <p>© Wenny Chao, 2024</p>
-		</footer>
+		
 	</body>
 </html>
