--- a/images/index.html
+++ b/images/index.html
@@ -9,17 +9,15 @@
 	</head>
 	<body>
 		<header>
-			<h2>imagesssssss</h2>
-		</header>
+            <h1>Images</h1>
+            <button id="back" onclick="window.location.href = '../index.html'">< home</button>
+            <button id="next" onclick="window.location.href = '../soundtracks/'">next ></button>
+        </header>
 		<main>
-			<section>
+            <section>
 				<ul id="channel-blocks"></ul>
-				<p>17 blocks</p>
 			</section>
-		</main>
-		<footer>
-            <p>© Wenny Chao, 2024</p>
-		
-		</footer>
+            <div class="paperOverlay"></div>
+        </main>
 	</body>
 </html>
