--- a/linked-media/index.html
+++ b/linked-media/index.html
@@ -10,15 +10,14 @@
     <body>
         <header>
             <h1>Linked Media</h1>
+            <button id="back" onclick="window.location.href = '../index.html'">< home</button>
+            <button id="next" onclick="window.location.href = '../images/'">next ></button>
         </header>
         <main>
             <section>
 				<ul id="channel-blocks"></ul>
-				<p>13 blocks</p>
 			</section>
+            <div class="paperOverlay"></div>
         </main>
-        <footer>
-            <p>© Wenny Chao, 2024</p>
-        </footer>
     </body>
 </html>
