--- a/soundtracks/index.html
+++ b/soundtracks/index.html
@@ -9,16 +9,16 @@
 	</head>
 	<body>
 		<header>
-			<h2>soundtracksssssss</h2>
+			<h1>soundtracks</h1>
+			<button id="back" onclick="window.location.href = '../index.html'">< home</button>
+            <button id="next" onclick="window.location.href = '../articles/'">next ></button>
 		</header>
 		<main>
 			<section>
 				<ul id="channel-blocks"></ul>
-				<p>4 blocks</p>
 			</section>
+			<div class="paperOverlay"></div>
 		</main>
-		<footer>
-            <p>© Wenny Chao, 2024</p>
-		</footer>
+
 	</body>
 </html>
