--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <main>
             <div id="catagories">
                 <ul>
-                    <li><a href="/linked-media/">LINKED MEDIA <span class="numbers">13</span></a></li>
-                    <li><a href="/images/">images <span class="numbers">17</span></a></li>
-                    <li><a href="/soundtracks/">SOUNDTRACKS <span class="numbers">04</span></a></li>
-                    <li><a href="/article/">Articles <span class="numbers">04</span></a></li>
-                    <li><a href="/attachment/">ATTACHMENT <span class="numbers">02</span></a></li>
+                    <li><a href="linked-media/">LINKED MEDIA <span class="numbers">13</span></a></li>
+                    <li><a href="images/">images <span class="numbers">17</span></a></li>
+                    <li><a href="soundtracks/">SOUNDTRACKS <span class="numbers">04</span></a></li>
+                    <li><a href="articles/">Articles <span class="numbers">04</span></a></li>
+                    <li><a href="attachment/">ATTACHMENT <span class="numbers">02</span></a></li>
             </ul>
             </div>
           <ul id="channel-blocks"></ul>
