--- a/linked-media/index.html
+++ b/linked-media/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <section>
-				<ul id="channel-blocks"></ul>
+				<ul onclick="toggleClickedState(this)" id="channel-blocks"></ul>
 			</section>
             <div class="paperOverlay"></div>
         </main>
