--- a/index.html
+++ b/index.html
@@ -1,51 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>links</title>
-        <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="reset.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
-        <script defer src="arena.js"></script>
-    </head>
-    <body>
-        <div id="file-background">
-  
-        <header>
-            <div id="project"><p>Project.04'</p></div>
-            <h2>Typography And Interaction</h2><hr>
-			<h1 id="channel-title"></h1>
-            
-            <div id="file-container">
-                <h3 class="file-item">File Date Number</h3>
-                <p class="file-item" id="channel-created-date"></p>
-            </div><hr id="file-date-underline">
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Rodrigo Gouveia — Links</title>
+	<link href="assets-links/reset.css" rel="stylesheet">
+	<link href="assets-links/style-links.css" rel="stylesheet">
+	<script defer src="assets-links/arena.js"></script>
+</head>
+<body>
+	<header>
+		<div class="headerContainer">
+			<h1 id="channel-title">Expressionsss</h1>
+			<section id="channel-description"></section>
+			<p><a id="channel-link">See on Are.na ↗</a></p>
+		<div>
+	</header>
+	<div class="noise"><img src="https://i.stack.imgur.com/w107y.gif" alt=""></div>
+	<!-- <div class="noise"><img src="https://images.squarespace-cdn.com/content/v1/62385d33dc30352fbb69cefa/1659466855376-D83K1USM1J4EWON4PUQY/image1.gif" alt=""></div> -->
+	
+	<main>
+		<section>
+			<ul id="channel-blocks"></ul>
+		</section>
+	</main>
 
-			<p id="my-name">HAOYU CHAO</p>
-            <h2 id="channel-description"></h2>
-            <a id="channel-link" href="https://www.are.na/rebecca-hart/design-student-survival" target="_blank"> ORIGINAL DOC ↗</a>
-		</header>
+	<nav>
+		<a class="navMenu" href="#allTheWayUp">Jump to top of page →</a>
+		<a class="navMenu" href="#bottom">← One below</a>
+		<a class="navMenu" href="#top">One Above →</a>
+	</nav>
 
-        <main>
-            <div id="catagories">
-                <ul>
-                    <li><a href="linked-media/">LINKED MEDIA <span class="numbers">13</span></a></li>
-                    <li><a href="images/">images <span class="numbers">17</span></a></li>
-                    <li><a href="soundtracks/">SOUNDTRACKS <span class="numbers">04</span></a></li>
-                    <li><a href="articles/">Articles <span class="numbers">04</span></a></li>
-                    <li><a href="attachment/">ATTACHMENT <span class="numbers">02</span></a></li>
-            </ul>
-            </div>
-          <ul id="channel-blocks"></ul>
-            <div class="paperOverlay"></div>
-         </main>
+	<footer >
+		<p id="channel-count" class="navMenu, hide"></p><em class="hide"> - blocks</em></p>
+		<section id="channel-users"></section>
+	</footer>
 
-		<footer>
-            <div id="signature-container">
-                <h3 class="signature-item">Signature of organizer</h3>
-                <section class="signature-item" id="channel-users"></section>
-            </div><hr id="signature-underline">
-		</footer>
-        </div>
-    </body>
+</body>
 </html>
