--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Rodrigo Gouveia — Links</title>
-	<link href="assets-links/reset.css" rel="stylesheet">
-	<link href="assets-links/style-links.css" rel="stylesheet">
-	<script defer src="assets-links/arena.js"></script>
+	<link href="asset/reset.css" rel="stylesheet">
+	<link href="asset/style-links.css" rel="stylesheet">
+	<script defer src="asset/arena.js"></script>
 </head>
 <body>
 	<header>
