--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rodrigo Gouveia — Links</title>
+	<title>Expressions in Motion: Dynamic Content Through Are.na API Integration</title>
 	<link href="asset/reset.css" rel="stylesheet">
 	<link href="asset/style-links.css" rel="stylesheet">
 	<script defer src="asset/arena.js"></script>
